--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <h1>Welcome to My Website!</h1>
     <p>This is a simple webpage created with GitHub Pages.</p>
     <p>You can customize this content as you like.</p>
-    <a href="https://github.com/">Visit GitHub</a>
+    <a href="https://space.bilibili.com/44942782?spm_id_from=333.1007.0.0" target="_blank">访问 Example 网站</a>
 </body>
 </html>
